@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Add a static table to define the axis order for soem epsg codes (/3582)
+
 - Add possibility to use KML_NAME_ITEM (#3728)
 
 - Fixed mapfile parsing error when a label angle referenced an attribute 
